Realised Faro shuffle assumed 52 cards in the deck. It probably breaks on odd numbers too i'm not sure. Added skeleton unit test project ready to get unit tests.

--- a/DeckLib/DeckLib/DeckLib.csproj
+++ b/DeckLib/DeckLib/DeckLib.csproj
@@ -38,8 +38,10 @@
     <Compile Include="Models\Card.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\CardColour.cs" />
     <Compile Include="Models\CardRank.cs" />
     <Compile Include="Models\CardSuit.cs" />
+    <Compile Include="Models\Deck.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
