Card unit tests coming on alright. Think i'm going a bit overboard though.

--- a/DeckLib/DeckLibTests/DeckLibTests.csproj
+++ b/DeckLib/DeckLibTests/DeckLibTests.csproj
@@ -50,8 +50,15 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="Tests\DeckTests.cs" />
+    <Compile Include="Tests\CardTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DeckLib\DeckLib.csproj">
+      <Project>{61bd7d5e-00c3-4950-8cf4-19ba8631e8d5}</Project>
+      <Name>DeckLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
